# distributed_data_storage

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  iceberg_catalog.db  logs_sender.py  main.py  pyproject.toml  s3_to_postgres.py
db/: engine.py
iceberg/: connect.py
kafka/: docker-compose.yaml  scripts.txt
logs_sender/: Dockerfile  main.py  pyproject.toml
producer/: .dockerignore  Dockerfile  last_timestamp_utils.py  main.py  pyproject.toml  read_logs_script.py
s3/: connect.py
scripts/: insert_logs.py  logs_generation.py
scripts/db/: init.sql
scripts/etl/: parquet_load.py  read_logs.py
scripts/spark_python/: kafka_to_postgres.py  python_task.py
spark/: Dockerfile
state/: state.json
tests/: conftest.py  test_create_tables.py
