[project]
name = "distributed-data-storage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faststream[cli,kafka]>=0.6.5",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "polars>=1.37.1",
    "psycopg[binary,pool]>=3.3.2",
    "pyarrow>=22.0.0",
    "pyiceberg[sql-postgres]>=0.10.0",
    "pyspark>=4.1.1",
    "python-dotenv>=1.2.1",
    "s3fs>=2025.12.0",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
